--- a/restapi/pom.xml
+++ b/restapi/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.3.0</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent git from repository -->
 	</parent>
 	<groupId>com.dbh</groupId>
 	<artifactId>restapi</artifactId>
